# safeguard-ml-fraud-detection-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-lambda.txt  requirements.txt
.github/workflows/: pipeline.yml
app/: __init__.py  handler.py
configs/: fraud_config.yaml
src/: __init__.py  data_engineering.py  data_integrity.py  evaluate.py  feature_pipeline.py  monitoring.py  train.py
terraform/: iam.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_data_engineering.py  test_feature_pipeline.py  test_handler.py  test_train.py
